# flora

./: devlog.md  implementation_plan.md  sample_rules.csv  scope.md  start.sh
backend/: .env.example  database.py  flora.db  main.py  models.py  pyproject.toml  requirements.txt  run_poller.py  schemas.py  seed.py
backend/routes/: admin.py  customers.py  dashboard.py  inbox.py  invoices.py  rules.py  skills.py
backend/services/: classifier.py  gmail_poller.py  gmail_sender.py  notes_updater.py  pipeline.py  reply_generator.py  rules_agent.py  scheduler.py
backend/tests/: conftest.py  test_admin.py  test_customers.py  test_dashboard.py  test_health.py  test_inbox.py  test_invoices.py  test_pipeline.py  test_rules.py
extra-fe/: package.json
extra-fe/app/: globals.css  layout.tsx  page.tsx
extra-fe/app/receivables/: page.tsx
extra-fe/components/: app-shell.tsx  chargebee-sidebar.tsx  metric-card.tsx  receivables-transition.tsx
extra-fe/components/automations/: automation-form.tsx
extra-fe/components/forecast/: export-modal.tsx  forecast-chart.tsx  forecast-settings.tsx  kpi-strip.tsx  month-drilldown.tsx  monthly-table.tsx
extra-fe/components/icons/: fora-bee-icon.tsx
extra-fe/components/ui/: sidebar.tsx
frontend/v0/: tsconfig.tsbuildinfo
frontend/v0/app/: globals.css  layout.tsx  page.tsx
frontend/v0/app/inbox/: page.tsx
frontend/v0/components/: app-shell.tsx  app-sidebar.tsx  automations-page.tsx  dashboard-page.tsx  fora-skills-page.tsx  inbox-page.tsx  receivables-transition.tsx  settings-page.tsx  timeline-page.tsx
frontend/v0/lib/: data.ts
(+32 files in other folders)
