[project]
name = "flora-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "python-multipart==0.0.20",
    "anthropic==0.40.0",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
